feat: search users by taste endpoint
